--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "tailwindcss": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "5.9.3"
   }
 }
